--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "motion": "^12.11.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.0",
     "usehooks-ts": "^3.1.1",
